--- a/Laba7.3.Dop5Huber.ipynb
+++ b/Laba7.3.Dop5Huber.ipynb
@@ -1341,16 +1341,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:5 out of the last 322 calls to <function Model.make_test_function.<locals>.test_function at 0x7f4bac16a7a0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
-      "Среднее абсолютное отклонение на проверочных данных:  1.80 галлон на милю\n",
-      "Средняя квадратическая ошибка на проверочных данных:  5.90\n"
+      "Среднее абсолютное отклонение на проверочных данных:  1.91 галлон на милю\n",
+      "Средняя квадратическая ошибка на проверочных данных:  5.85\n"
      ]
     }
    ],
@@ -1365,7 +1364,7 @@
     "model_tanh = keras.models.load_model('model_tanh.h5')\n",
     "model_huber = keras.models.load_model('model_huber.h5')\n",
     "\n",
-    "\n",
+    "loss, maeb, mseb = baza_model.evaluate(normed_test_data, test_labels, verbose=0)\n",
     "loss, train_mae, train_mse = baza_model2.evaluate(normed_train_data, train_labels, verbose=0)\n",
     "loss, train_mae1, train_mse1 = Dense3_model.evaluate(normed_train_data, train_labels, verbose=0)\n",
     "loss, train_mae2, train_mse2 = model_32Neurons.evaluate(normed_train_data, train_labels, verbose=0)\n",
@@ -1378,8 +1377,8 @@
     "loss, mae3, mse3 = model_huber.evaluate(normed_test_data, test_labels, verbose=0)\n",
     "loss, mae4, mse4 = model_tanh.evaluate(normed_test_data, test_labels, verbose=0)\n",
     "\n",
-    "print(\"Среднее абсолютное отклонение на проверочных данных: {:5.2f} галлон на милю\".format(mae))\n",
-    "print(\"Средняя квадратическая ошибка на проверочных данных: {:5.2f}\".format(mse))\n"
+    "print(\"Среднее абсолютное отклонение на проверочных данных: {:5.2f} галлон на милю\".format(maeb))\n",
+    "print(\"Средняя квадратическая ошибка на проверочных данных: {:5.2f}\".format(mseb))\n"
    ]
   },
   {
